--- a/.eslintrc
+++ b/.eslintrc
@@ -59,6 +59,7 @@
     "react/jsx-filename-extension": 0,
     "react/prop-types": 0,
     "react/state-in-constructor": 0,
-    "react/jsx-wrap-multilines": 0
+    "react/jsx-wrap-multilines": 0,
+    "react/jsx-one-expression-per-line": 0
   }
 }
