--- a/.eslintrc
+++ b/.eslintrc
@@ -60,6 +60,7 @@
     "react/prop-types": 0,
     "react/state-in-constructor": 0,
     "react/jsx-wrap-multilines": 0,
-    "react/jsx-one-expression-per-line": 0
+    "react/jsx-one-expression-per-line": 0,
+    "react/jsx-curly-newline": 0
   }
 }
